# Examples

./: .gitignore  README.md
ConvertMe/: main.qml  main_qml.cpp  moc_convert.cpp  moc_predefs.h  qrc_qml.cpp  readme.md  readme.txt
ConvertMe/Source/: .gitignore  ConvertMe.pro  convert.cpp  convert.h  main.cpp  qmltest.pro
EDLocal/: .gitignore  Filters_qml.cpp  Navigation_qml.cpp  StyleBackground_qml.cpp  StyleIndicator_qml.cpp  Table_qml.cpp  main_qml.cpp  moc_DataBaseJob.cpp  moc_edsmapiparse.cpp  moc_listmodel.cpp  qmlcache_loader.cpp  qrc_qml_qmlcache.cpp  readme.md
EDLocal/QtQml/: qmlplugin.dll.debug
EDLocal/QtQuick.2/: qtquick2plugin.dll.debug
EDLocal/Source/: EDLocal.pro  Filters.qml  Map3D.qml  Table.qml  databasejob.cpp  databasejob.h  edsmapiparse.cpp  edsmapiparse.h  listmodel.cpp  listmodel.h  main.cpp  main.qml  qml.qrc
EDLocal/source/: EDLocal.pro  Filters.qml  StyleBackground.qml  StyleIndicator.qml  Table.qml  databasejob.cpp  edsmapiparse.cpp  (+4 more)
IFromBook/: .gitignore  qml.qrc  qrc_qml.cpp  readme.md
MNN/: MNN.cpp  MNN.h  Readme.md
MoonVisor/: MoonVisor.exe.lnk  Qt5Core.dll.lnk  Qt5Gui.dll.lnk  Qt5Network.dll.lnk  Qt5Qml.dll.lnk  Qt5Quick.dll.lnk  Qt5QuickControls2.dll.lnk  Qt5QuickTemplates2.dll.lnk  QtGraphicalEffects.lnk  QtQml.lnk  QtQuick.2.lnk  QtQuick.lnk  imageformats.lnk  platforminputcontexts.lnk  platforms.lnk  readme.md  styles.lnk
MoonVisor/Source/: CMakeLists.txt  MoonVisor.pro  basetelescope.cpp  basetelescope.h  main.cpp  main.qml  qml.qrc  refractortelescope.cpp  refractortelescope.h
WebScrap/: Config.xml  Readme.md
(+24 files in other folders)
